--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.2.1",
+    "form-data": "^4.0.0",
+    "mailgun.js": "^3.3.0",
     "next": "10.0.9",
     "react": "17.0.1",
     "react-dom": "17.0.1",
